# ppg-glucose-estimation

./: .gitignore  CNN_GRU_ARCHITECTURE_REPORT.md  COMPLETE_GUIDE.md  DATA_PROCESSING_REPORT.md  Dockerfile  FINAL_TRAINING_RESULTS.md  FUNCTION_REFERENCE.md  HOW_TO_RUN.md  PERFORMANCE_METRICS.md  README.md  SIMPLE_EXPLANATION.md  TEST_RESULTS.md  TRAINING_ANALYSIS_COMPLETE.txt  TRAINING_RESULTS_SUMMARY.md  analyze_training_results.py  architecture_verification.py  cli_simple.py  clinical_validation_example.py  data_analysis_simplified.py  data_preprocessing_analysis.py  dataset_histogram_analysis.py  docker-compose.yml  final_evaluation.py  final_evaluation_report.txt  glucose_frequency_histogram.py  improve_performance.py  improved_implementation.py  improved_training_pipeline.py  main.py  model_analysis_no_torch.py  model_architecture_analysis.py  performance_improvement_plan.txt  plot_fold_results.py  ppg  ppg_data_analysis_report.py  processed_signal.csv  pyproject.toml  requirements.txt  run_complete_pipeline.py  run_improvements.sh  (+9 more)
.claude-flow/metrics/: system-metrics.json
.github/workflows/: ci.yml
api/: app.py
cli/: main.py
clinical_validation_results/: clinical_validation_report.json  executive_summary.txt
configs/: train.yaml
deployment_package/: deployment_config.json  performance_metrics.json
final_clinical_validation/: clinical_validation_report.json  executive_summary.txt
logs/: events.out.tfevents.1756739559.amrs-MacBook-Pro.local.14255.0
src/: __init__.py  evaluation.py
src/data/: dataloader.py
src/metrics/: __init__.py  clarke.py
src/models/: __init__.py  hybrid_model.py
src/preprocessing/: __init__.py  augmentation.py  filters.py  pipeline.py  resampler.py  windowing.py
src/quality/: __init__.py  metrics.py  validator.py
src/utils/: sim_ppg.py
tests/: test_preprocessing.py
visualizations/: README.md  VISUALIZATION_SUMMARY.md
