[tool.poetry]
name = "ppg-glucose"
version = "1.0.0"
description = "Non-invasive blood glucose estimation from PPG signals using hybrid CNN-GRU models"
authors = ["PPG Glucose Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
scipy = "^1.11.0"
pandas = "^2.0.0"
torch = "^2.0.0"
pytorch-lightning = "^2.0.0"
scikit-learn = "^1.3.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
omegaconf = "^2.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
tensorboard = "^2.14.0"
onnx = "^1.15.0"
onnxruntime = "^1.16.0"
tensorflow = "^2.14.0"
tqdm = "^4.66.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
ruff = "^0.1.0"
black = "^23.0.0"
mypy = "^1.5.0"
types-PyYAML = "^6.0.0"
rich = "^13.0.0"
hydra-core = "^1.3.0"
wandb = "^0.15.0"
streamlit = "^1.28.0"

[tool.poetry.scripts]
ppg = "cli.main:app"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]